# str_to_integer-mirror

./: CMakeLists.txt  LICENSE  README.md
include/sti/: sti.hpp
test/: correctness.cpp  performance.cpp
